Use of LinkedList for snake parts, more refactoring